# i40-backend

./: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
mqtt/: Cargo.toml
mqtt/src/: main.rs
web/: Cargo.toml  config.yaml
web/sql/: migrate.sql
web/src/: auth.rs  main.rs  routes.rs
web/src/api/: mod.rs
web/src/app/: user.rs
web/src/config/: mod.rs
web/src/middleware/: authorization.rs
web/surql/: migrate.surql.sql
