[package]
name = "mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["clock", "serde"] }
rand = "0.8.5"
rumqttc = "0.21.0"
serde = { version = "1.0.163", features = ["derive"] }
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.28.1", features = ["full"] }
common = { path = "../common" }
