[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="migrate"

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
actix-web-httpauth = "0.8.0"
chrono = "0.4.24"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.28.0", features = ["rt", "full"] }
